[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "radio-pyse"
dynamic = ["version"]
description = "Python Source Extractor"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {file = "LICENSE"}
authors = [
    { name = "TKP Discovery WG", email = "discovery@transientskp.org" },
]
requires-python = ">=3.10, <3.12"
dependencies = [
    "astropy",
    "dask[array]",
    "numpy<2.0",
    "psutil",
    "python-casacore",
    "python-dateutil",
    "pytz",
    "scipy",
    "numba",
    "sep",
    "six",
]

[project.urls]
Homepage = "http://docs.transientskp.org/"

# here so that standalone setuptools_scm also works
[tool.setuptools_scm]
version_file = "sourcefinder/_version.py"
version_scheme = "release-branch-semver"

[tool.hatch.version]
source = "vcs"
# default: guess-next-dev, alternatives: release-branch-semver, post-release, no-guess-dev
raw-options = { version_scheme = "guess-next-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "sourcefinder/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/sourcefinder",
]

[tool.hatch.build.targets.wheel]
packages = ["sourcefinder"]

[tool.hatch.envs.test]
extra-dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black",
    "flake8",
    "mypy",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = ["--import-mode=importlib", "--cov=sourcefinder", "-q", "-ra"]

[tool.black]
include = '\.pyi?$'
extend-exclude ='''
(
  ^test/data
)
'''

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
files = "sourcefinder"
