[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "radio-pyse"
dynamic = ["version"]
description = "Python Source Extractor"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {file = "LICENSE"}
authors = [
    { name = "TKP Discovery WG", email = "discovery@transientskp.org" },
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "astropy",
    "numpy",
    "python-casacore",
    "python-dateutil",
    "pytz",
    "scipy",
    "tomli; python_version < '3.11'",
    "numba",
    "sphinx",
    "pytest",
    "pandas",
    "tables",
    "pytest-cov",
    'enum-tools[sphinx]',
]

[project.optional-dependencies]
docs = [
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-autoapi",
]

[project.urls]
Homepage = "http://docs.transientskp.org/"

[project.scripts]
pyse = "sourcefinder.utility.cli:main"

# here so that standalone setuptools_scm also works
[tool.setuptools_scm]
version_file = "sourcefinder/_version.py"
version_scheme = "release-branch-semver"

[tool.hatch.version]
source = "vcs"
# default: guess-next-dev, alternatives: release-branch-semver, post-release, no-guess-dev
raw-options = { version_scheme = "guess-next-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "sourcefinder/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/sourcefinder",
]

[tool.hatch.build.targets.wheel]
packages = ["sourcefinder"]

[tool.hatch.envs.test]
matrix = [
    {python = ["3.10", "3.11", "3.12", "3.13"]}
]
extra-dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.py_oldest]
python = "3.10"
extra-dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.lint]
detached = true
python = "3.12"
dependencies = [
    "black",
    "flake8",
    "mypy",
    "ruff",
]

[tool.hatch.envs.docs]
extra-dependencies = [
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-autoapi",
]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = ["--import-mode=importlib", "--cov=sourcefinder", "-q", "-ra", "--cov-append"]

[tool.black]
include = '\.pyi?$'
extend-exclude ='''
(
  ^test/data
)
'''

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
files = "sourcefinder"
